[package]
name = "neural-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for Neural Garage code analysis tools - parsers, scanners, and reporters"
keywords = ["parser", "tree-sitter", "ast", "code-analysis", "reporter"]
categories = ["development-tools", "parsing"]
readme = "README.md"
homepage = "https://github.com/neural-garage/tools"
documentation = "https://docs.rs/neural-shared"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "neural_shared"
path = "src/lib.rs"
